--- a/miniprogram/pages/find/find.wxml
+++ b/miniprogram/pages/find/find.wxml
@@ -1,2 +1,13 @@
 <!--pages/find/find.wxml-->
-<text>pages/find/find.wxml</text>
+<swiper indicator-dots="true" indicator-active-color="#1296db" autoplay="true" interval="3000" duration="1000" class="swiper">
+  <swiper-item wx:for="{{imgUrls}}">
+    <image src="{{item.url}}" class="img" mode="scaleToFill"></image>
+  </swiper-item>
+</swiper>
+<text class="">推荐歌曲</text>
+<view>
+  <block wx:for="{{cards}}">
+    <my-card></my-card>
+  </block>
+</view>
+
