--- a/miniprogram/pages/music/music.wxss
+++ b/miniprogram/pages/music/music.wxss
@@ -1,1 +1,26 @@
 /* pages/music/music.wxss */
+.swiper{
+  height: 340rpx;
+}
+.img{
+  width: 100%;
+  height: 100%;
+}
+
+.title{
+  margin-top:10rpx;
+  margin-left:20rpx;
+}
+
+.playlist-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top:10rpx;
+}
+
+.scroll-z{
+  white-space: nowrap;
+  display: flex;
+}
