--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -1,2 +1,17 @@
-<!--pages/player/player.wxml-->
-<text>pages/player/player.wxml</text>
+<!--全屏毛玻璃效果-->
+<view wx:if="{{picUrl}}" class="player-container" style="background:url({{picUrl}}) center/cover no-repeat">
+</view>
+<view class="player-mask"></view>
+
+<view class="player-info">
+<!-- 封面信息-->
+    <view class="player-disc">
+      <image class="player-img" src="{{picUrl}}"></image>
+    </view>    
+<!-- 控制面板-->
+  <view class="control">
+    <text class="iconfont icon-hanhan-01-01"></text>
+    <text class="iconfont icon-bofang"></text>
+    <text class="iconfont icon-hanhan-01-011"></text>
+  </view>
+</view>    
