--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -103,4 +103,12 @@
   margin:0 50rpx;
 }
 
+.progress-bar{
+  width:90%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 24%;
+}
+
 
