--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -5,14 +5,16 @@
 
 <view class="player-info">
 <!-- 封面信息-->
-    <view class="player-disc {{isPlaying?'playing':''}}">
+    <view class="player-disc {{isPlaying?'playing':''}}" hidden="{{isLyricShow}}" bind:tap="onLyricShow">
       <image class="player-img  zhuan {{isPlaying?'':'ting'}}" 
       src="{{picUrl}}"></image>
     </view>  
     
+    <!--歌词-->
+    <z-lyric class="lyric" isLyricShow="{{isLyricShow}}" lyric="{{lyric}}" bind:tap="onLyricShow"></z-lyric>
     <!-- 进度条-->
     <view class="progress-bar">
-    <z-progress-bar bind:musicEnd="onNext"/>
+    <z-progress-bar bind:musicEnd="onNext" bind:timeUpdate="timeUpdate" />
     </view>
 
 <!-- 控制面板-->
