--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -110,5 +110,23 @@
   transform: translateX(-50%);
   bottom: 24%;
 }
+.lyric-scroll{
+  margin-top:300rpx ;
+  width: 100%;
+  height: 50%;
+  color:#ccc;
+  font-size: 32rpx;
+}
 
+.lyric-panel{
+  position: relative;
+  top: 50%;
+}
+
+.lyric{
+  min-height: 64rpx;
+}
+.hightlight-lyric{
+  color: #1296db;
+}
 
